Correção na mensagem do alert no rodapé e alterado icone do favicon

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -47,6 +47,12 @@
     margin-bottom: 12px;
 }
 
+a {
+    text-decoration: none;
+    margin-bottom: 12px;
+    color: rgb(208, 208, 208);
+}
+
 
 
 
