--- a/src/components/Produto.css
+++ b/src/components/Produto.css
@@ -1,54 +1,18 @@
-.produto {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  margin: 10px;
-  padding: 20px;
-  width: 100%;
-  max-height: 400px;
-  min-width: 100px;
-  background-color: white;
-  z-index: 1;
-}
-
-.produto:hover {
-  transition: 110ms ease-in;
-  transform: scale(1.04);
-  box-shadow: 1px 1px 6px gray;
-}
-
-.produto-info {
-  height: 100px;
-  margin-bottom: 15px;
-}
-
-.produto-preco {
-  margin-top: 5px;
-}
-
-.produto > img {
-  max-height: 200px;
-  width: 100%;
-  object-fit: contain;
-  margin-bottom: 15px;
-}
-
-.produto > button {
-  background: #f0c14b;
-  border: 1px solid;
-  margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
-  color: #111;
-  padding: 10px;
-}
-
-.produto > button:hover {
-  transition: 100ms ease-in;
-  transform: scale(1.06);
-  cursor: pointer;
-}
-
-.produto > button:active {
-  background-color: #a88734;
-}
+ button {
+    background: #f0c14b;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: #111;
+    padding: 10px;
+  }
+  
+  button:hover {
+    transition: 100ms ease-in;
+    transform: scale(1.06);
+    cursor: pointer;
+  }
+  
+  button:active {
+    background-color: #a88734;
+  }
